# pooonnnggg_bot

./: .gitignore  CMakeLists.txt  README.md
includes/: Ball.hpp  Bot.hpp  Number.hpp  Player.hpp  main.hpp
includes/donat_lib/: Globals.hpp  MyGame.hpp  MyRect.hpp  MyText.hpp  MyWindow.hpp  Window.hpp
src/: Ball.cpp  Bot.cpp  Number.cpp  Player.cpp  main.cpp
src/donat_lib/: MyGame.cpp  MyRect.cpp  MyText.cpp  MyWindow.cpp  Window.cpp
training/: CMakeLists.txt
training/includes/: constants.hpp  dqn_implementation.hpp  main_training.hpp  memory.hpp  pong_constants.hpp  pong_env.hpp
training/src/: dqn_implementation.cpp  main_training.cpp  memory.cpp  pong_env.cpp
